<resources>
    <string name="app_name">ConvoyApp</string>
    <string name="account_icon">Account icon</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="start_con">start convoy</string>
    <string name="join_con">join convoy</string>
    <string name="leave_con">leave convoy</string>
    <string name="end_con">end convoy</string>
    <string name="leave_convoy">Leave convoy</string>
    <string name="join_convoy">Join convoy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_convoy">Start Convoy</string>
    <string name="log_out">Log Out</string>
    <string name="end_convoy_button">End convoy button</string>
    <string name="msg_subscribed">Subscribed!!!</string>
    <string name="msg_subscribe_failed">Subscription Failed!</string>
    <string name="play_button">Play Button</string>
    <string name="record_audio">record_audio</string>
    <string name="audioTime">TextView</string>
    <string name="userText">TextView</string>

    <string-array name="prog">
        <item>JAVA</item>
        <item>C++</item>
        <item>PYTHON</item>
        <item>red</item>
        <item>yellow</item>
        <item>black</item>
        <item>blue</item>
        <item>friday</item>
        <item>seven</item>
    </string-array>
</resources>