<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvoyControlFragment">

    <Button
        android:id="@+id/startBtn"
        android:layout_width="145dp"
        android:layout_height="96dp"
        android:layout_marginBottom="20dp"
        android:text="@string/start_convoy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/joinBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="135dp"
        android:layout_height="96dp"
        android:layout_marginBottom="20dp"
        android:text="@string/join_convoy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leaveBtn"
        app:layout_constraintStart_toEndOf="@+id/startBtn" />

    <Button
        android:id="@+id/leaveBtn"
        android:layout_width="137dp"
        android:layout_height="96dp"
        android:layout_marginBottom="20dp"
        android:text="@string/leave_convoy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/joinBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>